@@ -8,6 +8,7 @@
    - The --host option for the server script defaulted to localhost, rather
      than listening on all interfaces, which was the previous default. (Dave
      Rolsky)
+   - Restore -p option for pid file in the FastCGI server script.
    - Fix the script environment variables MYAPP_PORT and MYAPP_RELOAD RT#52604
    - Fix aliasing applications under non-root paths with mod_rewrite in
      some apache versions where %ENV{SCRIPT_NAME} is set to the real name of
